[gd_scene load_steps=22 format=3 uid="uid://djw71ie8wroqe"]

[ext_resource type="Script" path="res://objects/gameplay/player/player.gd" id="1_cyoaf"]
[ext_resource type="Texture2D" uid="uid://dawxfm4v5g37x" path="res://assets/sprites/player/player_idle.png" id="2_04sks"]
[ext_resource type="Texture2D" uid="uid://485tmp7b8c2a" path="res://assets/sprites/player/player_jump.png" id="3_2i24a"]
[ext_resource type="Texture2D" uid="uid://beapxp4qm050a" path="res://assets/sprites/player/player_run.png" id="4_if5yt"]
[ext_resource type="Script" path="res://objects/gameplay/player/movement.gd" id="5_lrip1"]
[ext_resource type="Script" path="res://objects/gameplay/player/input_collector.gd" id="5_usvpp"]
[ext_resource type="Script" path="res://objects/gameplay/player/hook.gd" id="7_d6q0m"]
[ext_resource type="Texture2D" uid="uid://d1w1lriy5cxo5" path="res://assets/sprites/player/grappling_hook/target.png" id="8_5rpek"]
[ext_resource type="Texture2D" uid="uid://g3h7jvrkag6s" path="res://assets/sprites/player/grappling_hook/reticle.png" id="8_7tjho"]
[ext_resource type="Texture2D" uid="uid://f4elybu4alg1" path="res://assets/sprites/player/grappling_hook/chain.png" id="8_komv4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bf01k"]
atlas = ExtResource("3_2i24a")
region = Rect2(0, 0, 14, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1woej"]
atlas = ExtResource("3_2i24a")
region = Rect2(14, 0, 14, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxqel"]
atlas = ExtResource("4_if5yt")
region = Rect2(0, 0, 13, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hkt2s"]
atlas = ExtResource("4_if5yt")
region = Rect2(13, 0, 13, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nha0r"]
atlas = ExtResource("4_if5yt")
region = Rect2(26, 0, 13, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lbpr"]
atlas = ExtResource("4_if5yt")
region = Rect2(39, 0, 13, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uiwd3"]
atlas = ExtResource("4_if5yt")
region = Rect2(52, 0, 13, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ftsq6"]
atlas = ExtResource("4_if5yt")
region = Rect2(65, 0, 13, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ntnjk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_04sks")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bf01k")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1woej")
}],
"loop": true,
"name": &"land",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxqel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hkt2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nha0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lbpr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uiwd3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftsq6")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xhog8"]
size = Vector2(73, 90)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o8i1t"]
size = Vector2(72, 5)

[node name="player" type="CharacterBody2D"]
scale = Vector2(0.25, 0.25)
collision_layer = 2
script = ExtResource("1_cyoaf")

[node name="sprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(6, 6)
sprite_frames = SubResource("SpriteFrames_ntnjk")
animation = &"idle"

[node name="collider" type="CollisionShape2D" parent="."]
position = Vector2(1, 3)
shape = SubResource("RectangleShape2D_xhog8")

[node name="input_collector" type="Node" parent="."]
script = ExtResource("5_usvpp")

[node name="movement" type="Node2D" parent="." node_paths=PackedStringArray("sprite", "input_collector")]
script = ExtResource("5_lrip1")
sprite = NodePath("../sprite")
input_collector = NodePath("../input_collector")

[node name="ground_ray" type="ShapeCast2D" parent="movement"]
position = Vector2(2.08165e-12, 46)
shape = SubResource("RectangleShape2D_o8i1t")
target_position = Vector2(2.08165e-12, 5)
max_results = 1

[node name="grapple" type="Node2D" parent="."]
script = ExtResource("7_d6q0m")

[node name="hook" type="Node2D" parent="grapple"]
top_level = true

[node name="chain" type="Sprite2D" parent="grapple/hook"]
texture = ExtResource("8_komv4")
region_enabled = true
region_rect = Rect2(2.08165e-12, 2.08165e-12, 2, 2.08165e-12)

[node name="RayCast2D" type="RayCast2D" parent="grapple"]
target_position = Vector2(2.08165e-12, 1000)

[node name="target" type="Sprite2D" parent="grapple/RayCast2D"]
z_index = -1
scale = Vector2(2, 1)
texture = ExtResource("8_5rpek")
offset = Vector2(2.08165e-12, 275)
region_enabled = true
region_rect = Rect2(2.08165e-12, 2.08165e-12, 4, 400)

[node name="reticle" type="Sprite2D" parent="grapple/RayCast2D"]
position = Vector2(2.08165e-12, 500)
rotation = 3.14159
scale = Vector2(2, 2)
texture = ExtResource("8_7tjho")
offset = Vector2(2.08165e-12, 8)

[connection signal="new_inputs" from="input_collector" to="movement" method="_on_new_inputs"]
[connection signal="new_inputs" from="input_collector" to="grapple" method="_on_new_inputs"]
